--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Site Interativo - Estilo Jogo</title>
+  <title>Game Buzz - Veio para Voar</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; }
 
@@ -91,7 +91,7 @@
 <body>
 
 <header>
-  <h2>Meu Negócio</h2>
+  <h2>Game Buzz</h2>
   <nav>
     <a href="#inicio">Início</a>
     <a href="#sobre">Sobre</a>
@@ -101,34 +101,34 @@
 </header>
 
 <div class="hero" id="inicio">
-  <h1>Bem-vindo ao Mundo</h1>
-  <h2 style="margin-top:10px;">Interativo do Meu Negócio</h2>
+  <h1>Bem-vindo ao Game Buzz</h1>
+  <h2 style="margin-top:10px;">Venha conhecer nossa trajetória</h2>
 </div>
 
 <section id="sobre">
   <h2>Sobre o Negócio</h2>
   <div class="card">
-    <p>Aqui você pode colocar uma descrição épica sobre o seu negócio, em estilo de jogo, como se o usuário estivesse entrando em uma nova missão.</p>
+    <p>Game Buzz nasce com o objetivo de oferecer eletrônicos pensados para criatividade e desempenho. Inspirados em marcas de referência como mancer, entregamos design industrial, usabilidade e suporte técnico.</p>
   </div>
 </section>
 
 <section id="servicos">
   <h2>Serviços</h2>
-  <div class="card"><strong>⚔️ Missão 1:</strong> Serviço principal</div>
-  <div class="card"><strong>🛡️ Missão 2:</strong> Outro serviço importante</div>
-  <div class="card"><strong>🎯 Missão 3:</strong> Solução especial para clientes</div>
+  <div class="card"><strong>⚔️ Design tecnológico:</strong> Otimos acabamentos, linhas limpas e materiais duráveis.</div>
+  <div class="card"><strong>🛡️ Performance:</strong> Componentes escolhidos para proporcionar experiência fluida em jogos e produção.</div>
+  <div class="card"><strong>🎯 Suporte:</strong> Garantia, assistência técnica e atualizações contínuas.</div>
 </section>
 
 <section id="contato">
   <h2>Contato</h2>
   <div class="card">
-    <p>Email: contato@meunegocio.com</p>
-    <p>Instagram: @meunegocio</p>
+    <p>Email: gamebuzzofc@gmail.com</p>
+    <p>Instagram: @gamebuzz</p>
   </div>
 </section>
 
 <footer>
-  <p>Site estilo jogo — Desenvolvido para apresentar seu negócio de forma moderna e interativa.</p>
+  <p>© Game Buzz — Todos os direitos reservados</p>
 </footer>
 
 </body>
