--- a/index.html
+++ b/index.html
@@ -108,7 +108,18 @@
 <section id="sobre">
   <h2>Sobre o Negócio</h2>
   <div class="card">
-    <p>Game Buzz nasce com o objetivo de oferecer eletrônicos pensados para criatividade e desempenho. Inspirados em marcas de referência como mancer, entregamos design industrial, usabilidade e suporte técnico.</p>
+    <p>
+      A Game Buzz inicia sua jornada como uma fornecedora especializada no transporte e distribuição de eletrônicos e equipamentos tecnológicos. 
+      Nosso foco é garantir que cada produto chegue ao cliente com segurança, agilidade e total cuidado — sempre prezando pela integridade e qualidade.
+    </p>
+    <br>
+    <p>
+      Trabalhamos com parceiros confiáveis e logística inteligente para atender lojas, criadores de conteúdo, gamers e empresas que dependem de equipamentos de alto desempenho.
+    </p>
+    <br>
+    <p>
+      Nossa visão é clara: em um futuro próximo, evoluir de distribuidora para fabricante, desenvolvendo nossa própria linha de produtos tecnológicos, unindo inovação, estética moderna e performance avançada.
+    </p>
   </div>
 </section>
 
