--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </header>
 
 <div class="hero" id="inicio">
-  <h1>Bem-vindo ao Game Buzz</h1>
+  <h1>Bem-vindo - Game Buzz</h1>
   <h2 style="margin-top:10px;">Venha conhecer nossa trajetória</h2>
 </div>
 
@@ -125,10 +125,91 @@
 
 <section id="servicos">
   <h2>Serviços</h2>
-  <div class="card"><strong>⚔️ Design tecnológico:</strong> Otimos acabamentos, linhas limpas e materiais duráveis.</div>
-  <div class="card"><strong>🛡️ Performance:</strong> Componentes escolhidos para proporcionar experiência fluida em jogos e produção.</div>
-  <div class="card"><strong>🎯 Suporte:</strong> Garantia, assistência técnica e atualizações contínuas.</div>
+
+  <div class="card" style="border-left: 4px solid #4cd4ff;">
+    <strong>📦 Gestão de Transporte Especializado:</strong>
+    <p style="margin-top: 8px;">
+      Operamos com logística dedicada ao manuseio e transporte de equipamentos tecnológicos,
+      assegurando integridade total da carga do início ao fim.
+    </p>
+  </div>
+
+  <div class="card" style="border-left: 4px solid #4cd4ff;">
+    <strong>🚚 Distribuição Estruturada:</strong>
+    <p style="margin-top: 8px;">
+      Planejamento de rotas, consolidação de envios e soluções personalizadas para empresas que
+      necessitam de entregas precisas e dentro do prazo.
+    </p>
+  </div>
+
+  <div class="card" style="border-left: 4px solid #4cd4ff;">
+    <strong>🔒 Segurança e Monitoramento:</strong>
+    <p style="margin-top: 8px;">
+      Utilizamos sistemas de rastreamento, controle de risco e protocolos de transporte para
+      produtos sensíveis e de alto valor.
+    </p>
+  </div>
+
+  <div class="card" style="border-left: 4px solid #4cd4ff;">
+    <strong>🏬 Soluções Corporativas:</strong>
+    <p style="margin-top: 8px;">
+      Atendemos empresas, lojas de tecnologia e e-commerces com operações logísticas customizadas
+      conforme a necessidade de cada projeto.
+    </p>
+  </div>
+
 </section>
+
+  <section id="visao-futura">
+  <h2>Visão Futura</h2>
+  <div class="card">
+    <p>
+      A Game Buzz nasce com a missão de transformar a logística tecnológica no Brasil. 
+      Nosso objetivo é evoluir constantemente, expandindo nossa operação e ampliando nossa 
+      estrutura de distribuição.
+    </p>
+    <br>
+    <p>
+      Em médio prazo, projetamos iniciar o desenvolvimento de nossa própria linha de produtos,
+      unindo inovação, design e eficiência energética. Acreditamos em soluções inteligentes que
+      integrem tecnologia, desempenho e responsabilidade ambiental.
+    </p>
+  </div>
+</section>
+
+  <section id="por-que-escolher">
+  <h2>Por que escolher a Game Buzz?</h2>
+
+  <div class="card" style="border-left: 4px solid #4cd4ff;">
+    <strong>✔ Excelência Operacional</strong>
+    <p style="margin-top: 6px;">
+      Processos padronizados, equipe especializada e compromisso com qualidade em cada entrega.
+    </p>
+  </div>
+
+  <div class="card" style="border-left: 4px solid #4cd4ff;">
+    <strong>✔ Confiabilidade e Transparência</strong>
+    <p style="margin-top: 6px;">
+      Comunicação clara, monitoramento em tempo real e segurança reforçada para cargas sensíveis.
+    </p>
+  </div>
+
+  <div class="card" style="border-left: 4px solid #4cd4ff;">
+    <strong>✔ Foco em Tecnologia</strong>
+    <p style="margin-top: 6px;">
+      Especialização em eletrônicos e componentes de alto valor, garantindo transporte adequado e preciso.
+    </p>
+  </div>
+
+  <div class="card" style="border-left: 4px solid #4cd4ff;">
+    <strong>✔ Crescimento Comprometido</strong>
+    <p style="margin-top: 6px;">
+      Trabalhamos com visão de longo prazo, investindo em estrutura, inovação e desenvolvimento próprio.
+    </p>
+  </div>
+
+</section>
+
 
 <section id="contato">
   <h2>Contato</h2>
