--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
     <a href="#sobre">Sobre</a>
     <a href="#servicos">Serviços</a>
     <a href="#contato">Contato</a>
+     <a href="#contato">Visão Futura</a>
+     <a href="#contato">Diferencial</a>
   </nav>
 </header>
 
@@ -222,6 +224,7 @@
 <footer>
   <p>© Game Buzz — Todos os direitos reservados</p>
 </footer>
+<img src="SUA_LOGO_AQUI.png" alt="Game Buzz Logo" class="logo-fixed">
 
 </body>
 </html>
