--- a/index.html
+++ b/index.html
@@ -93,13 +93,14 @@
 <header>
   <h2>Game Buzz</h2>
   <nav>
-    <a href="#inicio">Início</a>
-    <a href="#sobre">Sobre</a>
-    <a href="#servicos">Serviços</a>
-    <a href="#contato">Contato</a>
-     <a href="#contato">Visão Futura</a>
-     <a href="#contato">Diferencial</a>
-  </nav>
+  <a href="#inicio">Início</a>
+  <a href="#sobre">Sobre</a>
+  <a href="#servicos">Serviços</a>
+  <a href="#visao-futura">Visão Futura</a>
+  <a href="#por-que-escolher">Diferencial</a>
+  <a href="#contato">Contato</a>
+</nav>
+
 </header>
 
 <div class="hero" id="inicio">
