--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 <footer>
   <p>© Game Buzz — Todos os direitos reservados</p>
 </footer>
-<img src="SUA_LOGO_AQUI.png" alt="Game Buzz Logo" class="logo-fixed">
+<img src="file:///C:/Users/safer/Downloads/SUA_LOGO_AQUI.png.webp" alt="Game Buzz Logo" class="logo-fixed">
 
 </body>
 </html>
