--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
   </div>
 </section>
 
-<footer>
-  <p>© Game Buzz — Todos os direitos reservados</p>
+<footer>  <p>© Game Buzz — Todos os direitos reservados</p>
 </footer>
-<img src="file:///C:/Users/safer/Downloads/SUA_LOGO_AQUI.png.webp" alt="Game Buzz Logo" class="logo-fixed">
+<img src="/mnt/data/SUA_LOGO_AQUI.png.webp" alt="Logo Game Buzz" class="logo-fixed">
+
 
 </body>
 </html>
