--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 </header>
 
 <div class="hero" id="inicio">
-  <h1>Bem-vindo Game Buzz</h1>
+  <h1>Bem-vindo 
+    Game Buzz</h1>
   <h2 style="margin-top:10px;">Venha conhecer nossa trajetória</h2>
 </div>
 
