--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
 <footer>  <p>© Game Buzz — Todos os direitos reservados</p>
 </footer>
-<img src="/mnt/data/SUA_LOGO_AQUI.png.webp" alt="Logo Game Buzz" class="logo-fixed">
+<img src="img/SUA_LOGO_AQUI.png.webp" alt="Logo Game Buzz" class="logo-fixed">
 
 </body>
 </html>
