--- a/index.html
+++ b/index.html
@@ -191,11 +191,12 @@
 
 </section>
 
-<section id="visao-futura">
-  <h2>Visão Futura</h2>
-  <div class="card">
-    <p>
-      A Game Buzz nasce com a missão de transformar a logística tecnológica no Brasil. 
+<section id="por-que-escolher">
+  <h2>Visão Futura</h2>   
+  <div class="card" style="border-left: 4px solid #4cd4ff;">
+    <strong>Nossos Planos Futuros</strong>
+    <p style="margin-top: 6px;">
+     A Game Buzz nasce com a missão de transformar a logística tecnológica no Brasil. 
       Nosso objetivo é evoluir constantemente, expandindo nossa operação e ampliando nossa 
       estrutura de distribuição.
     </p>
@@ -205,9 +206,9 @@
       unindo inovação, design e eficiência energética. Acreditamos em soluções inteligentes que
       integrem tecnologia, desempenho e responsabilidade ambiental.
     </p>
-  </div>
-</section>
-
+    </div>
+    </section>
+  
 <section id="por-que-escolher">
   <h2>Por que escolher a Game Buzz?</h2>
 
@@ -254,7 +255,7 @@
 </footer>
 
 <!-- Logo fixa no canto inferior direito -->
-<img src="/mnt/data/SUA_LOGO_AQUI.png.webp" alt="Logo Game Buzz" class="logo-fixed">
+<img src="img/SUA_LOGO_AQUI.png.webp" alt="Logo Game Buzz" class="logo-fixed">
 
 </body>
 </html>
