--- a/index.html
+++ b/index.html
@@ -132,13 +132,16 @@
 </header>
 
 <div class="hero" id="inicio">
-  <h1>Bem-vindo ao Game Buzz</h1>
+  <h1>Bem-vindo 
+    Game Buzz</h1>
   <h2 style="margin-top:10px;">Venha conhecer nossa trajetória</h2>
 </div>
 
-<section id="sobre">
-  <h2>Sobre o Negócio</h2>
-  <div class="card">
+<section id="por-que-escolher">
+  <h2>Sobre</h2>   
+  <div class="card" style="border-left: 4px solid #4cd4ff;">
+    <strong>Sobre o Negócio</strong>
+    </div>
     <p>
       A Game Buzz inicia sua jornada como uma fornecedora especializada no transporte e distribuição de eletrônicos e equipamentos tecnológicos. 
       Nosso foco é garantir que cada produto chegue ao cliente com segurança, agilidade e total cuidado — sempre prezando pela integridade e qualidade.
