--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
 </header>
 
 <div class="hero" id="inicio">
-  <h1>Bem-vindo 
-    Game Buzz</h1>
-  <h2 style="margin-top:10px;">Venha conhecer nossa trajetória</h2>
+  <h1>   Bem-vindo </h1>
+  <h2 style="margin-top:10px;"> Game Buzz - Empresa especializada em transporte </h2>
 </div>
 
 <section id="por-que-escolher">
