--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@
   <h2 style="margin-top:10px;"> Game Buzz - Empresa especializada em transporte </h2>
 </div>
 
-<section id="por-que-escolher">
-  <h2>Sobre</h2>   
+
+<section id="servicos">
+  <h2>Sobre</h2>
+
   <div class="card" style="border-left: 4px solid #4cd4ff;">
-    <strong>Sobre o Negócio</strong>
-    </div>
-    <p>
+    <strong> Nossa Jornada</strong>
+    <p style="margin-top: 8px;">
       A Game Buzz inicia sua jornada como uma fornecedora especializada no transporte e distribuição de eletrônicos e equipamentos tecnológicos. 
       Nosso foco é garantir que cada produto chegue ao cliente com segurança, agilidade e total cuidado — sempre prezando pela integridade e qualidade.
     </p>
@@ -153,8 +154,8 @@
     <p>
       Nossa visão é clara: em um futuro próximo, evoluir de distribuidora para fabricante, desenvolvendo nossa própria linha de produtos tecnológicos, unindo inovação, estética moderna e performance avançada.
     </p>
-  </div>
-</section>
+   </div>
+   </section>
 
 <section id="servicos">
   <h2>Serviços</h2>
