--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 
 <div class="hero" id="inicio">
   <h1>   Bem-vindo </h1>
-  <h2 style="margin-top:10px;"> Game Buzz - Empresa especializada em transporte </h2>
+  <h2 style="margin-top:10px;">    Game Buzz - 
+    Empresa especializada em transporte </h2>
 </div>
 
 
