--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </div>
 
 
-<section id="servicos">
+<section id="sobre">
   <h2>Sobre</h2>
 
   <div class="card" style="border-left: 4px solid #4cd4ff;">
