--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 </section>
 
-<section id="por-que-escolher">
+<section id="visao-futura">
   <h2>Visão Futura</h2>   
   <div class="card" style="border-left: 4px solid #4cd4ff;">
     <strong>Nossos Planos Futuros</strong>
